# rmf_site

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  index.html  tinyrobot.site.ron  tinyrobot_new.site.ron
crates/rmf_scene_composer/: Cargo.toml  package.xml  ros2_msgs.repos
crates/rmf_scene_composer/src/: generate_scene.rs  lib.rs  main.rs  scene_creation_widget.rs  scene_inspection_widget.rs  scene_placement.rs  scene_site_extension.rs  scene_subscription.rs
crates/rmf_site_animate/: Cargo.toml  README.md
crates/rmf_site_animate/examples/: animate_example.rs
crates/rmf_site_animate/src/: lib.rs
crates/rmf_site_camera/: Cargo.toml  README.md
crates/rmf_site_camera/examples/: camera_test.rs
crates/rmf_site_camera/src/: components.rs  lib.rs  plugins.rs  resources.rs  systems.rs
crates/rmf_site_cmake/: CMakeLists.txt
crates/rmf_site_cmake/cmake/: rmf_site_cmakeConfig.cmake.in  rmf_site_generate.cmake
crates/rmf_site_dioxus/: Cargo.toml
crates/rmf_site_editor/: Cargo.toml  package.xml
crates/rmf_site_editor/.cargo/: config.toml
crates/rmf_site_editor/assets/: office.building.yaml  office.site.json
crates/rmf_site_editor/examples/: extending_menu.rs
crates/rmf_site_editor/src/: asset_loaders.rs  autoload.rs  color_picker.rs  demo_world.rs  exit_confirmation.rs  issue.rs  keyboard.rs  layers.rs  lib.rs  log.rs  main.rs  main_menu.rs  occupancy.rs  osm_slippy_map.rs  recency.rs  sdf_loader.rs  shapes.rs  site_asset_io.rs  wireframe.rs  workspace.rs
crates/rmf_site_editor_web/: Cargo.toml  README.md
crates/rmf_site_editor_web/src/: lib.rs
crates/rmf_site_egui/: Cargo.toml  README.md
crates/rmf_site_egui/src/: lib.rs
crates/rmf_site_format/: Cargo.toml  README.md  package.xml  test.sdf
crates/rmf_site_format/src/: alignment.rs  anchor.rs  asset_source.rs  camera_poses.rs  category.rs  dock.rs  door.rs  drawing.rs  edge.rs  extensions.rs  fiducial.rs  floor.rs  georeference.rs  issue.rs  lane.rs  layer.rs  level.rs  lib.rs  lift.rs  light.rs  location.rs  measurement.rs  misc.rs  model.rs  nav_graph.rs  navigation.rs  path.rs  physical_camera.rs  point.rs  primitive_shape.rs  robot.rs  robot_properties.rs  scenario.rs  sdf.rs  semver.rs  site.rs  task.rs  texture.rs  wall.rs
crates/rmf_site_format/test/: 07-physics.urdf
crates/rmf_site_map_server/: Cargo.toml  package.xml
crates/rmf_site_map_server/src/: main.rs
crates/rmf_site_maps/: CMakeLists.txt
crates/rmf_site_mesh/: Cargo.toml  README.md
crates/rmf_site_mesh/examples/: meshes_scene.rs
crates/rmf_site_mesh/src/: lib.rs  traits.rs
crates/rmf_site_picking/: Cargo.toml  README.md
crates/rmf_site_picking/examples/: picking_testing.rs
crates/rmf_site_picking/src/: lib.rs
demo_package_exporter/: Cargo.toml
demo_package_exporter/src/: main.rs
rmf_sandbox/: .gitignore  Cargo.toml  rust-toolchain.toml
rmf_sandbox/.cargo/: config.toml
rmf_sandbox/assets/demo_maps/: office.building.yaml
rmf_sandbox/assets/textures/: attribution.md
rmf_sandbox/scripts/: build-web.sh  deploy-web.sh  serve-web.sh
rmf_sandbox/src/: aabb.rs  animate.rs  basic_components.rs  building_map.rs  camera.rs  camera_controls.rs  crowd_sim.rs  deletion.rs  demo_world.rs  despawn.rs  door.rs  fiducial.rs  floor.rs  interaction.rs  keyboard.rs  lane.rs  level.rs  level_transform.rs  lib.rs  lift.rs  light.rs  main.rs  main_menu.rs  measurement.rs  model.rs  physical_camera.rs  picker.rs  rbmf.rs  sandbox_asset_io.rs  save_load.rs  shapes.rs  simulation_state.rs  site_map.rs  spawn.rs  spawner.rs  supercamera.rs  traffic_editor.rs  ui_widgets.rs  utils.rs  vertex.rs  (+3 more)
rmf_sandbox/src/interaction/: anchor.rs  assets.rs  camera_controls.rs  cursor.rs  drag.rs  interaction.rs  lane.rs  misc.rs  mod.rs  mode.rs  picking.rs  select.rs  select_anchor.rs
rmf_sandbox/src/site/: anchor.rs  assets.rs  change_plugin.rs  deletion.rs  despawn.rs  door.rs  floor.rs  lane.rs  lift.rs  light.rs  load.rs  measurement.rs  mod.rs  model.rs  nav_graph.rs  physical_camera.rs  recall_plugin.rs  save.rs  site.rs  util.rs  wall.rs
rmf_sandbox/src/site_map/: mod.rs  ui.rs
rmf_sandbox/src/widgets/: icons.rs  mod.rs
rmf_sandbox/web/: index.html  root_index.html
rmf_scene_composer/: Cargo.toml  build.rs  gz-msgs.repos
rmf_scene_composer/examples/: scene_broadcaster.rs
rmf_scene_composer/src/: generate_scene.rs  lib.rs  main.rs  protos.rs  scene_creation_widget.rs  scene_inspection_widget.rs  scene_loading.rs  scene_placement.rs  scene_site_extension.rs  scene_subscription.rs
rmf_site_editor/: .gitignore  Cargo.toml  package.xml
rmf_site_editor/examples/: extending_menu.rs
rmf_site_editor/scripts/: build-web.sh  deploy-web.sh  style-check.sh
rmf_site_editor/src/: aabb.rs  animate.rs  autoload.rs  demo_world.rs  exit_confirmation.rs  floor_grid.rs  issue.rs  keyboard.rs  lib.rs  log.rs  main.rs  main_menu.rs  occupancy.rs  osm_slippy_map.rs  rcc.rs  recency.rs  save.rs  sdf_loader.rs  settings.rs  shapes.rs  site_asset_io.rs  ui_command.rs  urdf_loader.rs  view_menu.rs  warehouse_generator.rs  wireframe.rs  workcell_editor.rs  workspace.rs
rmf_site_editor/src/interaction/: anchor.rs  assets.rs  camera_controls.rs  category_visibility.rs  cursor.rs  drag.rs  edge.rs  gizmo.rs  highlight.rs  lane.rs  lift.rs  light.rs  misc.rs  mod.rs  mode.rs  model.rs  model_preview.rs  outline.rs  passage.rs  path.rs  picking.rs  point.rs  popup.rs  preview.rs  (+5 more)
rmf_site_editor/web/: index.html
rmf_site_format/: .gitignore  Cargo.toml  package.xml
rmf_site_format/src/: agent.rs  alignment.rs  anchor.rs  asset_source.rs  camera_poses.rs  category.rs  constraint.rs  dock.rs  door.rs  drawing.rs  edge.rs  fiducial.rs  floor.rs  geo_reference.rs  georeference.rs  instance.rs  is_default.rs  issue.rs  lane.rs  layer.rs  level.rs  lib.rs  lift.rs  light.rs  location.rs  measurement.rs  misc.rs  mobile_robot.rs  mobility.rs  model.rs  nav_graph.rs  navigation.rs  occupancy.rs  passage.rs  path.rs  physical_camera.rs  point.rs  primitive_shape.rs  recall.rs  robot.rs  (+11 more)
rmf_site_format/test/: 05-visual.urdf
(+512 files in other folders)
