[workspace]
members = [
    "crates/*"
]

# This is needed for packages that are part of a workspace to use the 2nd version
# of the cargo dependency resolving algorithm. In ordinary crates this would be
# enabled with edition="2021", but it seems that when a crate is in a workspace,
# the workspace needs to explicitly specify this.
# For more see: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

# Compile time optimizations as suggested in
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0" }

rmf_site_picking = { path = "crates/rmf_site_picking" }
rmf_site_format = { path = "crates/rmf_site_format" }
rmf_site_editor = { path = "crates/rmf_site_editor" }
rmf_site_editor_web = { path = "crates/rmf_site_editor_web" }
rmf_site_animate = {path = "crates/rmf_site_animate"}
rmf_site_camera = {path = "crates/rmf_site_camera"}
rmf_site_mesh = {path = "crates/rmf_site_mesh"}
rmf_site_egui = {path = "crates/rmf_site_egui"}
mapf = {git = "https://github.com/open-rmf/mapf", rev = "fd84e58"}
serde_yaml = "0.8.23"
serde_json = "*"
ron = "0.10"
thiserror = "*"
glam = { version = "0.29" } # Ensure that this match's bevy_math's glam before updating.
uuid = { version = "1.13"}
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "514949e" }
urdf-rs = { version = "0.7.3"}
once_cell = "1"
pathdiff = "*"
bevy_mod_outline = "0.10.1"
bevy_gltf_export = { git = "https://github.com/luca-della-vedova/bevy_gltf_export", rev = "098fc7c" }
bevy_stl = "0.16"
bevy_obj = "0.16"
smallvec = "*"
futures-lite = "1.12.0"
dirs = "5.0"
thread_local = "*"
geo = "0.27"
itertools = "*"
bitfield = "*"
crossbeam-channel = "0.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.1"
rfd = "0.12"
utm = "0.1.6"
gz-fuel = { git = "https://github.com/open-rmf/gz-fuel-rs", branch = "main" }
ehttp = { version = "0.4"}
nalgebra = "0.32.5"
anyhow = "*"
bevy_egui = "0.34" # Ensure this matches other downstream crate's bevy_egui version (E.G: bevy-inspector-egui) before updating.
bevy-inspector-egui = "0.31"
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "release-0.4" }
float_eq = "1.0"
wasm-bindgen = "=0.2.100" # Remember to update the README if we change this version number
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3"}
clap = { version = "4.0.10" }
bytemuck = {version = "1.22"}
testdir = "*"
file_diff = "*"

bevy = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_a11y = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_animation = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_app = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_asset = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_audio = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_color = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_core_pipeline = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_derive = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_dev_tools = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_diagnostic = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_dylib = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ecs = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_encase_derive = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gilrs = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gizmos = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gltf = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_image = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_input = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_input_focus = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_internal = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_log = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_macro_utils = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_math = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_mesh = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_mikktspace = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_pbr = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_picking = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_platform = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ptr = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_reflect = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_remote = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_render = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_scene = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_sprite = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_state = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_tasks = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_text = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_time = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_transform = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ui = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_utils = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_window = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_winit = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }

[patch.crates-io]
bevy = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_a11y = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_animation = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_app = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_asset = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_audio = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_color = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_core_pipeline = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_derive = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_dev_tools = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_diagnostic = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_dylib = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ecs = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_encase_derive = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gilrs = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gizmos = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_gltf = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_image = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_input = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_input_focus = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_internal = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_log = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_macro_utils = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_math = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_mesh = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_mikktspace = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_pbr = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_picking = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_platform = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ptr = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_reflect = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_remote = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_render = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_scene = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_sprite = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_state = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_tasks = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_text = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_time = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_transform = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_ui = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_utils = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_window = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
bevy_winit = { git = "https://github.com/xiyuoh/bevy", branch = "fix-specialize-panic" }
