[workspace]
members = [
    "crates/*"
]

# This is needed for packages that are part of a workspace to use the 2nd version
# of the cargo dependency resolving algorithm. In ordinary crates this would be
# enabled with edition="2021", but it seems that when a crate is in a workspace,
# the workspace needs to explicitly specify this.
# For more see: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

# Compile time optimizations as suggested in
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0" }
strum = { version = "*", features = ["derive"] }

rmf_site_picking = { path = "crates/rmf_site_picking" }
rmf_site_format = { path = "crates/rmf_site_format" }
rmf_site_editor = { path = "crates/rmf_site_editor" }
rmf_site_editor_web = { path = "crates/rmf_site_editor_web" }
rmf_site_animate = {path = "crates/rmf_site_animate"}
rmf_site_camera = {path = "crates/rmf_site_camera"}
rmf_site_mesh = {path = "crates/rmf_site_mesh"}
rmf_site_egui = {path = "crates/rmf_site_egui"}
mapf = {git = "https://github.com/open-rmf/mapf", rev = "fd84e58"}
serde_yaml = "0.8.23"
serde_json = "*"
ron = "0.10"
thiserror = "*"
glam = { version = "0.29" } # Ensure that this match's bevy_math's glam before updating.
uuid = { version = "1.13"}
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "514949e" }
urdf-rs = { version = "0.7.3"}
once_cell = "1"
pathdiff = "*"
bevy_mod_outline = "0.10.1"
bevy_gltf_export = "0.1.1"
bevy_stl = "0.16"
bevy_obj = "0.16"
smallvec = "*"
futures-lite = "1.12.0"
dirs = "5.0"
thread_local = "*"
geo = "0.27"
itertools = "*"
bitfield = "*"
crossbeam-channel = "0.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.1"
rfd = "0.12"
utm = "0.1.6"
gz-fuel = { git = "https://github.com/open-rmf/gz-fuel-rs", branch = "main" }
ehttp = { version = "0.4"}
nalgebra = "0.32.5"
anyhow = "*"
bevy_egui = "0.34" # Ensure this matches other downstream crate's bevy_egui version (E.G: bevy-inspector-egui) before updating.
bevy-inspector-egui = "0.31"
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "release-0.4" }
float_eq = "1.0"
wasm-bindgen = "=0.2.100" # Remember to update the README if we change this version number
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3"}
clap = { version = "4.0.10" }
bytemuck = {version = "1.22"}
bevy_infinite_grid = { version = "0.15"}
testdir = "*"
file_diff = "*"
web-time = "1"

bevy = {version = "0.16", features = ["configurable_error_handler"]}
bevy_a11y = "0.16"
bevy_animation = "0.16"
bevy_app = "0.16"
bevy_asset = "0.16"
bevy_audio = "0.16"
bevy_color = "0.16"
bevy_core_pipeline = "0.16"
bevy_derive = "0.16"
bevy_dev_tools = "0.16"
bevy_diagnostic = "0.16"
bevy_dylib = "0.16"
bevy_ecs = {version = "0.16", features = ["configurable_error_handler"]}
bevy_encase_derive = "0.16"
bevy_gilrs = "0.16"
bevy_gizmos = "0.16"
bevy_gltf = "0.16"
bevy_image = "0.16"
bevy_input = "0.16"
bevy_input_focus = "0.16"
bevy_internal = "0.16"
bevy_log = "0.16"
bevy_macro_utils = "0.16"
bevy_math = "0.16"
bevy_mesh = "0.16"
bevy_mikktspace = "0.16"
bevy_pbr = "0.16"
bevy_picking = "0.16"
bevy_platform = "0.16"
bevy_ptr = "0.16"
bevy_reflect = "0.16"
bevy_remote = "0.16"
bevy_render = "0.16"
bevy_rich_text3d = "0.4.1"
bevy_scene = "0.16"
bevy_sprite = "0.16"
bevy_state = "0.16"
bevy_tasks = "0.16"
bevy_text = "0.16"
bevy_time = "0.16"
bevy_transform = "0.16"
bevy_ui = "0.16"
bevy_utils = "0.16"
bevy_window = "0.16"
bevy_winit = "0.16"
