[package]
name = "rmf_sandbox"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "librmf_sandbox"

[[bin]]
path = "src/main.rs"
name = "rmf_sandbox"

[dependencies]
bevy_egui = "0.15"
bevy_mod_picking = "0.8"
bevy_mod_raycast = "0.6"
rfd = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.56", features = ["console"] }
futures-lite = "1.12.0"
bevy = "0.8"
dirs = "4.0"
thread_local = "*"
lyon = "1"
rmf_site_format = { path = "../rmf_site_format", features = ["bevy"] }

# only enable the 'dynamic' feature if we're not building for web or windows
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "windows")))'.dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
surf = { version = "2.3" }

# windows doesnt work well with dynamic feature yet
[target.'cfg(target_os = "windows")'.dependencies]
bevy = "0.8"
surf = { version = "2.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2.3", default-features = false, features = ["wasm-client", "encoding"] }
