[package]
name = "rmf_scene_composer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "librmf_scene_composer"

[[bin]]
path = "src/main.rs"
name = "rmf_scene_composer"

[dependencies]
prost = "0.13.5"
bevy = "0.12"
rmf_site_editor = { path = "../rmf_site_editor" }
thiserror = "*"


[build-dependencies]
pkg-config = "0.3.32"
prost-build = "0.13.5"
thiserror = "*"
