[package]
name = "rmf_scene_composer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "rmf_scene_composer"

[[bin]]
path = "src/main.rs"
name = "rmf_scene_composer"

[dependencies]
prost = "0.13.5"
bevy = "0.12"
rmf_site_editor = { path = "../rmf_site_editor" }
rmf_site_format = { path = "../rmf_site_format" }
zenoh = { version = "1.3.2", features = ["unstable"] }
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main" }
thiserror = "*"
bevy_egui = "0.23"
anyhow = "*"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pkg-config = "0.3.32"
prost-build = "0.13.5"
thiserror = "*"

[dev-dependencies]
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "9fc35f2"}
clap = { version = "4.0.10", features = ["color", "derive", "help", "usage", "suggestions"] }
tokio = "*"
