[package]
name = "rmf_site_editor"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "librmf_site_editor"

[[bin]]
path = "src/main.rs"
name = "rmf_site_editor"

[[example]]
name = "extending_site_editor"
path = "examples/extending_menu.rs"

[dependencies]
bevy_egui = "0.23"
bevy_mod_raycast = "0.16"
bevy_mod_outline = "0.6"
bevy_gltf_export = { git = "https://github.com/luca-della-vedova/bevy_gltf_export", branch = "luca/transform_api"}
bevy_polyline = "0.8.1"
bevy_stl = "0.12"
bevy_obj = { version = "0.12.1", features = ["scene"] }
smallvec = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0"
futures-lite = "1.12.0"
bevy = { version = "0.12", features = ["pnm", "jpeg", "tga"] }
dirs = "5.0"
thread_local = "*"
geo = "0.27"
thiserror = "*"
rmf_site_format = { path = "../rmf_site_format", features = ["bevy"] }
itertools = "*"
bitfield = "*"
crossbeam-channel = "0.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.1"
rfd = "0.12"
urdf-rs = "0.7"
yaserde = "0.7"
utm = "0.1.6"
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "9fc35f2"}
gz-fuel = { git = "https://github.com/open-rmf/gz-fuel-rs", branch = "main" }
pathdiff = "*"
ehttp = { version = "0.4", features = ["native-async"] }
nalgebra = "0.32.5"
anyhow = "*"
strum = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0.10", features = ["color", "derive", "help", "usage", "suggestions"] }
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main", features = ["single_threaded_async"]}
