[package]
name = "rmf_site_format"
version = "0.0.1"
edition = "2021"
authors = ["Grey <grey@openrobotics.org>"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "*"
ron = "0.8"
thiserror = "*"
glam = { version = "0.24", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
# add features=["bevy"] to a dependent Cargo.toml to get the bevy-related features
# We depend on a bugfix released specifically in 0.7.3
bevy = { version = "0.11", default_features = false, optional = true }
urdf-rs = "0.7.3"
pathdiff = "*"

[dev-dependencies]
float_eq = "1.0"
