[package]
name = "rmf_site_format"
version = "0.0.1"
edition = "2021"
authors = ["Grey <grey@openrobotics.org>"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "*"
ron = "0.8"
thiserror = "*"
glam = { version = "0.24", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
# add features=["bevy"] to a dependent Cargo.toml to get the bevy-related features
# We depend on a bugfix released specifically in 0.7.3
bevy = { version = "0.11", optional = true }
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "48ebcad"}
yaserde = "0.7"
urdf-rs = "0.7.3"
# Used for lazy initialization of static variable when they are non const
once_cell = "1"
pathdiff = "*"

[dev-dependencies]
float_eq = "1.0"
