[package]
name = "rmf_site_format"
version = "0.0.1"
edition = "2021"
authors = ["Grey <grey@openrobotics.org>"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8.23"
serde_json = "*"
# We need ron v0.9 to be released before RON works correctly for structs with #[serde(flatten)]
ron = { git = "https://github.com/ron-rs/ron", branch = "master" }
thiserror = "*"
glam = { version = "0.24", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
# add features=["bevy"] to a dependent Cargo.toml to get the bevy-related features
bevy = { version = "0.12", optional = true }
sdformat_rs = { git = "https://github.com/open-rmf/sdf_rust_experimental", rev = "9fc35f2"}
yaserde = "0.7"
# We depend on a bugfix released specifically in 0.7.3
urdf-rs = { version = "0.7.3", optional = true }
# Used for lazy initialization of static variable when they are non const
once_cell = "1"
pathdiff = "*"

[dev-dependencies]
float_eq = "1.0"

[features]
urdf = ["dep:urdf-rs"]
default = ["urdf"]
