[package]
name = "rmf_site_animate"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_utils = {workspace = true}
bevy_transform = {workspace = true}
bevy_math = {workspace = true}
bevy_render = {workspace = true}
bevy_reflect = {workspace = true}
bevy_time = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}