[package]
name = "rmf_site_animate"
version = "0.0.1"
edition = "2024"
authors = ["Grey <mxgrey@intrinsic.ai>"]
description = "Animation utilities for rmf_site_editor"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/rmf_site"
readme = "README.md"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_utils = {workspace = true}
bevy_transform = {workspace = true}
bevy_math = {workspace = true}
bevy_render = {workspace = true}
bevy_reflect = {workspace = true}
bevy_time = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
