[package]
name = "rmf_site_dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-native = {workspace = true}
dioxus-native-dom = {workspace = true}
dioxus = {workspace = true}

bevy_ecs = {workspace = true}
bevy_render = {workspace = true}
bevy_app = {workspace = true}
bevy_transform = {workspace = true}
bevy_mesh = {workspace = true}
bevy_utils = {workspace = true}
bevy_window = {workspace = true}
bevy_math = {workspace = true}
bevy_winit = {workspace = true}
bevy_asset = {workspace = true}
bevy_log = {workspace = true}
bevy_input = {workspace = true}
bevy_time = {workspace = true}
bevy_image = {workspace = true}
bevy_picking = {workspace = true}
bevy_derive = {workspace = true}
bevy_color = {workspace = true}
bevy_sprite = {workspace = true}
bevy_core_pipeline = {workspace = true}
bevy_dioxus_sync = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
paste = "1.0"
